<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_busstation">

    <fragment
        android:id="@+id/navigation_busstation"
        android:name="com.euriconfneto.mybus.ui.busstation.BusStationFragment"
        android:label="@string/title_busStation"
        tools:layout="@layout/fragment_busstation" />

    <fragment
        android:id="@+id/navigation_bus"
        android:name="com.euriconfneto.mybus.ui.bus.BusFragment"
        android:label="@string/title_bus"
        tools:layout="@layout/fragment_bus" />

    <fragment
        android:id="@+id/navigation_lane"
        android:name="com.euriconfneto.mybus.ui.lane.LaneFragment"
        android:label="@string/title_lane"
        tools:layout="@layout/fragment_lane" />
</navigation>