<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/text_lt"
        android:text="@string/lt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_tl"/>

    <TextView
        android:id="@+id/text_tl"
        android:text="@string/tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_lt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_main_terminal"
        android:text="@string/main_terminal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_lt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_asnwer_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/text_main_terminal"
        app:layout_constraintTop_toBottomOf="@+id/text_lt"/>

    <TextView
        android:id="@+id/text_second_terminal"
        android:text="@string/second_terminal"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_main_terminal"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_asnwer_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_asnwer_main"
        app:layout_constraintStart_toEndOf="@+id/text_second_terminal"/>

    <TextView
        android:id="@+id/text_direction"
        android:text="@string/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_tl"
        app:layout_constraintEnd_toStartOf="@+id/text_asnwer_direction"/>

    <TextView
        android:id="@+id/text_asnwer_direction"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_tl"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_circular"
        android:text="@string/circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/text_direction"
        app:layout_constraintEnd_toStartOf="@+id/text_asnwer_circular"/>

    <TextView
        android:id="@+id/text_asnwer_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_asnwer_direction"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>