<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lane.LaneFragment"
    android:padding="15dp">

    <EditText
        android:id="@+id/edit_search_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:hint="@string/title_lane"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/spinner_direction"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_direction"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintHorizontal_weight="2"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/direction"
        app:layout_constraintEnd_toStartOf="@+id/image_search"
        app:layout_constraintStart_toEndOf="@+id/edit_search_line"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_search"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_direction"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_direction"/>
</androidx.constraintlayout.widget.ConstraintLayout>